--- a/Model selection/Model selection.Rmd
+++ b/Model selection/Model selection.Rmd
@@ -1,6 +1,4 @@
 ---
-title: "Model selection"
-author: "Simona Kolarova"
 output:
   html_document:
     toc: true
@@ -9,13 +7,8 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, cache = TRUE, warning=FALSE, message=FALSE)
 ```
-# Aims
-- Compare the predictive performance of 4 machine learning models (i.e., Logistic regression, Random forest, Support vector machines and Neutral networks) on the phase bahaviour data\
-- Compare the predictive performance of the models on 2 phase behaviour datasets, in which the phase behaviour is classified at every vertex in a phase diagram with a grid of 5 pc (94 datapoints per phase diagram) or a grid of 2.5 pc (407 datapoints per phase diagram). 
 
-# Sources
-## Libraries
-```{r libraries}
+```{r libraries, echo = FALSE}
 library(tidyverse)
 library(caret)
 library(randomForest)
@@ -25,200 +18,156 @@ library(pROC)
 library(doParallel)
 ```
 
-## R script sources
+### Scripts
 ```{r r scripts}
 source("Machine learning algorithms.R", local = knitr::knit_global())
 source("Predictive performance assessment.R", local = knitr::knit_global())
 source("Statistical analysis.R", local = knitr::knit_global())
 ```
 
-## Parallel processing
-```{r parallel processing}
+```{r parallel processing, echo = FALSE}
 registerDoParallel(makeCluster(detectCores()-1))
 ```
 
-## Datasets
+### Dataset
 ``` {r data}
-PB_predictors_25pc_step <- read.csv("Data/Phase behaviour and descriptors (25 pc step).csv")
-PB_predictors_5pc_step <- read.csv("Data/Phase behaviour and descriptors (5 pc step).csv")
+PB_predictors_data<- read.csv("Data/Phase behaviour and descriptors (25 pc step).csv")
 ```
 
-### Datasets splitting
-Both datasets were split into 2 training/testing(`TT_data`) and validation (`V_data`) datasets comprising the same 21 and 7 phase diagrams, respectively.
+The dataset was split into a training/testing (`TT_data`) and validation (`V_data`) subset comprising 21 and 7 phase diagrams, respectively.
 ``` {r data splitting}
-TT_data_25pc_step <- filter(PB_predictors_25pc_step, Set == "Training")
-V_data_25pc_step <- filter(PB_predictors_25pc_step, Set == "Validation")
-
-TT_data_5pc_step <- filter(PB_predictors_5pc_step, Set == "Training")
-V_data_5pc_step <- filter(PB_predictors_5pc_step, Set == "Validation")
+TT_data <- filter(PB_predictors_data, Set == "Training")
+V_data <- filter(PB_predictors_data, Set == "Validation")
 ```
 
-### Dataset predictor and class level definition
+A list of all phase behaviour predictor names was created and the phase behaviour variable was encoded as a factor.
 ``` {r data definitions}
-predictors_all<-colnames(TT_data_25pc_step[,3:66][,-(4:6)])
+predictors_all<-colnames(TT_data[,3:66][,-(4:6)])
 
-TT_data_25pc_step$Phase.behaviour<-factor(as.character(TT_data_25pc_step$Phase.behaviour))
-V_data_25pc_step$Phase.behaviour<-factor(as.character(V_data_25pc_step$Phase.behaviour))
-
-TT_data_5pc_step$Phase.behaviour<-factor(as.character(TT_data_5pc_step$Phase.behaviour))
-V_data_5pc_step$Phase.behaviour<-factor(as.character(V_data_5pc_step$Phase.behaviour))
+TT_data$Phase.behaviour<-factor(as.character(TT_data$Phase.behaviour))
+V_data$Phase.behaviour<-factor(as.character(V_data$Phase.behaviour))
 ```
 
-# Predictive modelling 
-## Global parameters  
-_Summary_ and a _training control_ ('trainCtrl') functions to allow the uniform training and evaluation of the models.
+### Predictive modelling 
+#### Model training and evaluation
+**Global parameters** <br>
+A *summary* and a *training control* function were defined to allow the uniform training and evaluation of the models.
 ```{r controls}
 PMsummary <- function(...) c(twoClassSummary(...), defaultSummary(...))
-trainCtrl <- trainControl(method = "cv", number = 10,
-                          summaryFunction = PMsummary,classProbs = TRUE, savePredictions=TRUE)
+trainCtrl <- trainControl(method = "cv", 
+                          number = 10,
+                          summaryFunction = PMsummary, 
+                          classProbs = TRUE, 
+                          savePredictions=TRUE)
 ```
 
 ```{r results dataframe, echo = FALSE}
-# Model evaluation dataframes
-model_performance_25pc_step <- data.frame(matrix(ncol = 17, nrow = 80))
-colnames(model_performance_25pc_step) <- c("Model", "AUC_testing", "Accuracy_testing", "Kappa_testing", "Sensitivity_testing", "Specificity_testing", "Precision_testing", "Recall_testing", "F1_testing", "AUC_validation", "Accuracy_validation", "Kappa_validation", "Sensitivity_validation", "Specificity_validation", "Precision_validation", "Recall_validation", "F1_validation")
-model_performance_5pc_step <- model_performance_25pc_step
+model_performance <- data.frame(matrix(ncol = 17, nrow = 80))
+colnames(model_performance) <- c("Model", "AUC_testing", "Accuracy_testing", "Kappa_testing", "Sensitivity_testing", "Specificity_testing", "Precision_testing", "Recall_testing", "F1_testing", "AUC_validation", "Accuracy_validation", "Kappa_validation", "Sensitivity_validation", "Specificity_validation", "Precision_validation", "Recall_validation", "F1_validation")
 ```
 
-## Model training and evalution for 2.5 % step phase behaviour dataset
-```{r LR 2.5 pc}
+**Logistic regression (LR)** <br>
+LR is a linear classification algorithm, which models the
+mathematical relationships between each predictor and the categorical outcome by
+minimising the sums of the squared residuals and linearly aggregates the resulting individual
+relationships to obtain a probabilistic categorical outcome. This ML algorithm requires no
+parameter tuning, thereby reducing the likelihood of data overfitting. For the purpose of
+this study, the *glm* method in the R package *caret* was used to train a LR model.
+
+```{r LR}
 for (i in 1:20) {
-  model_performance_25pc_step <- run_logistic_regression(TT_data_25pc_step, V_data_25pc_step, predictors_all, model_performance_25pc_step,"Logistic regression", i)
+  model_performance <- run_logistic_regression(TT_data, V_data, predictors_all, model_performance,"Logistic regression", i)
 }
 ```
-```{r RF 2.5 pc}
+**Random forest (RF)** <br>
+RF is a tree-based ensemble model that constructs individual trees by
+using the independent variables to create binary decision split points, *i.e.*, nodes, and
+partitions the data into higher outcome homogeneity groups until a user-defined maximum
+number of terminal tree nodes or minimum outcome group size is reached. To reduce the
+correlation between the structure of the individual trees in the RF ensemble, each decision
+tree is trained using a training data subset (bootstrap sampling) and a predictors subset
+(feature bagging). Once trained, the model makes outcome predictions by averaging the
+predictions of the independent trees. In this study, we used the R package `randomForest`
+to train a RF ensemble with 1000 trees, each of which was trained using approximately 63%
+of the training data and between 10 and 61 predictors (optimum number determined by
+tuning) to obtain a final tree structure with a maximum of 15 tree nodes and a minimum of 1
+datapoint per terminal node.
+
+```{r RF}
 for (i in 21:40) {
-  model_performance_25pc_step <- run_random_forest(TT_data_25pc_step, V_data_25pc_step, predictors_all, model_performance_25pc_step, "Random forest", i)
-}
-```
-```{r SVM 2.5 pc}
-for (i in 41:60) {
-  model_performance_25pc_step <- run_support_vector_machines(TT_data_25pc_step, V_data_25pc_step, predictors_all, model_performance_25pc_step, "Support vector machines", i)
-}
-```
-```{r NN 2.5 pc}
-for (i in 61:80) {
-  model_performance_25pc_step <- run_neural_network(TT_data_25pc_step, V_data_25pc_step, predictors_all, model_performance_25pc_step, "Neural network", i)
+  model_performance <- run_random_forest(TT_data, V_data, predictors_all, model_performance, "Random forest", i)
 }
 ```
 
-## Model training and evalution for 5 % step phase behaviour dataset
-```{r LR 5 pc}
-for (i in 1:20) {
-  model_performance_5pc_step <- run_logistic_regression(TT_data_5pc_step, V_data_5pc_step, predictors_all, model_performance_5pc_step,"Logistic regression", i)
-}
-```
-```{r RF 5 pc}
-for (i in 21:40) {
-  model_performance_5pc_step <- run_random_forest(TT_data_5pc_step, V_data_5pc_step, predictors_all, model_performance_5pc_step, "Random forest", i)
-}
-```
-```{r SVM 5 pc}
+**Support vector machines (SVM)** <br>
+SVM is a non-probabilistic classifier, which generates a multidimensional space using the predictors, defines the coordinates of the outcome data in it and
+determines the optimum separation hyperplane between the different outcome classes. To
+optimise the separation between the dependent variable categories, while minimising data
+overfitting, both the kernel type (*i.e.*, the spatial transformation function) and the cost (*i.e.*,
+the penalty for misclassified samples) can be altered. To obtain a SVM predictive model,
+we used the R package `kernlab`, specified the kernel function as radial and tuned the value
+of the cost parameter.
+```{r SVM}
 for (i in 41:60) {
-  model_performance_5pc_step <- run_support_vector_machines(TT_data_5pc_step, V_data_5pc_step, predictors_all, model_performance_5pc_step, "Support vector machines", i)
-}
-```
-```{r NN 5 pc}
-for (i in 61:80) {
-  model_performance_5pc_step <- run_neural_network(TT_data_5pc_step, V_data_5pc_step, predictors_all, model_performance_5pc_step, "Neural network", i)
+  model_performance <- run_support_vector_machines(TT_data, V_data, predictors_all, model_performance, "Support vector machines", i)
 }
 ```
 
-## Comparison of model performance metrics
+**Neural network (NN)** <br>
+NN is a machine learning algorithm comprised of simple computing units, *i.e.*, neurons,
+organised in interconnected layers, *i.e.*, network, where the predictor layer input passes
+through one or more hidden layers before reaching the output layer and determining the
+dependent variable value. The algorithm’s architecture, the number of hidden neurons and
+layers and the weight decay, *i.e.*, the penalisation for large regression coefficients, among
+others, can all be adjusted to optimise the NN predictive performance. In this study, we
+used the R package `nnet` to train a NN model with a feed-forward architecture and a
+single hidden layer. The optimum number of hidden neurons and the weight decay value
+were determined through parameter tuning.
+
+```{r NN}
+for (i in 61:80) {
+  model_performance <- run_neural_network(TT_data, V_data, predictors_all, model_performance, "Neural network", i)
+}
+```
+
+#### Model performance comparison 
+To select the best model for the classification problem, the area under the receiver operating characteristic (ROC) curve (AUC) for the predictions on the testing (randomly selected 30% of `TT_data`, which was not used for training) and on the validation subsets for the four different models was compared.
 ```{r performance metrics, echo = FALSE}
-model_performance_5pc_step$Model <- factor(model_performance_5pc_step$Model)
-model_performance_5pc_step$AUC_testing <- as.numeric(model_performance_5pc_step$AUC_testing)
-model_performance_5pc_step$AUC_validation <- as.numeric(model_performance_5pc_step$AUC_validation)
-
-model_performance_25pc_step$Model <- factor(model_performance_25pc_step$Model)
-model_performance_25pc_step$AUC_testing <- as.numeric(model_performance_25pc_step$AUC_testing)
-model_performance_25pc_step$AUC_validation <- as.numeric(model_performance_25pc_step$AUC_validation)
+model_performance$Model <- factor(model_performance$Model)
+model_performance$AUC_testing <- as.numeric(model_performance$AUC_testing)
+model_performance$AUC_validation <- as.numeric(model_performance$AUC_validation)
 ```
 
-### Visial comparison
-```{r 2.5 pc models plot, fig.height=4, fig.width=10, echo=FALSE}
-ggplot(model_performance_25pc_step, aes(x = Model)) + 
-  geom_boxplot(aes(y=AUC_testing, colour = "AUC testing")) + 
-  geom_boxplot(aes(y=AUC_validation, colour = "AUC validation")) +
+**Visual comparison**
+```{r models plot, fig.height=4, fig.width=10, echo=FALSE}
+ggplot(model_performance, aes(x = Model)) + 
+  geom_boxplot(aes(y=AUC_testing, colour = "Testing subset")) + 
+  geom_boxplot(aes(y=AUC_validation, colour = "Validation subset")) +
   scale_x_discrete(limits=c("Logistic regression", "Random forest", "Support vector machines", "Neural network"))  +
   ylim(0.5,1) +
-  labs(title = "Predictive performance of models trained with 2.5 % grid spacing data",
+  labs(title = "Predictive performance of different models",
        y = "Area under the ROC curve (AUC)",
        color = "Metric") +
   scale_color_brewer(palette = "Set1") +
-  theme_classic()
-```
-```{r 5 pc models plot, fig.height=4, fig.width=10, echo=FALSE}
-ggplot(model_performance_5pc_step, aes(x = Model)) + 
-  geom_boxplot(aes(y=AUC_testing, colour = "AUC testing")) + 
-  geom_boxplot(aes(y=AUC_validation, colour = "AUC validation")) +
-  scale_x_discrete(limits=c("Logistic regression", "Random forest", "Support vector machines", "Neural network"))  +
-  ylim(0.5,1) +
-  labs(title = "Predictive performance of models trained with 5 % grid spacing data",
-       y = "Area under the ROC curve (AUC)",
-       color = "Metric") +
-  scale_color_brewer(palette = "Set1") +
-  theme_classic()
+  theme_classic() +
+  theme(plot.title = element_text(hjust = 0.5)) 
 ```
 
-### Statistical comparison
-```{r 2.5 and 5 pc models statistics, echo = FALSE}
-cat("Comparison of AUC testing values for models trained with 2.5 % grid spacing data \n ")
-run_statistical_analysys(model_performance_25pc_step, model_performance_25pc_step$AUC_testing, model_performance_25pc_step$Model)
 
-cat("Comparison of AUC validation values for models trained with 2.5 % grid spacing data \n")
-run_statistical_analysys(model_performance_25pc_step, model_performance_25pc_step$AUC_validation, model_performance_25pc_step$Model)
-
-cat("Comparison of AUC testing values for models trained with 5 % grid spacing data \n")
-run_statistical_analysys(model_performance_5pc_step, model_performance_5pc_step$AUC_testing, model_performance_5pc_step$Model)
-
-cat("Comparison of AUC validation values for models trained with 5 % grid spacing data \n")
-run_statistical_analysys(model_performance_5pc_step, model_performance_5pc_step$AUC_validation, model_performance_5pc_step$Model)
+**Statistical comparison** <br>
+Comparison of AUC testing values for the different models:
+```{r models testing statistics, echo = FALSE}
+run_statistical_analysys(model_performance, model_performance$AUC_testing, model_performance$Model)
+```
+<br>
+Comparison of AUC validation values for the different models:
+```{r models validation statistics, echo = FALSE}
+run_statistical_analysys(model_performance, model_performance$AUC_validation, model_performance$Model)
 ```
 
-Overall, the random forest model was observed to have a statistically significantly better predictive performance on the validatation datasets (both for phase behaviour data with 2.5% or 5% spacing) than the Logistic regression, Support vector machines and Neural network models and, hence, was carried forward.
+**Overall, the random forest model was observed to have a statistically significantly better predictive performance on both the testing and validatation datasets than the Logistic regression, Support vector machines or Neural network models and, hence, was carried forward.**
 
-## Comparison of random forest model predictive performance on phase behaviour data with 2.5% or 5% grid spacing
-```{r rf models dataframe, echo = FALSE}
-model_performance_random_forest <- model_performance_25pc_step[21:60,]
-model_performance_random_forest[21:40,] <- model_performance_5pc_step[21:40,]
-model_performance_random_forest$Data_spacing <- c(rep(2.5, 20), rep(5, 20))
 
-model_performance_random_forest$Model <- factor(model_performance_random_forest$Model)
-model_performance_random_forest$AUC_testing <- as.numeric(model_performance_random_forest$AUC_testing)
-model_performance_random_forest$AUC_validation <- as.numeric(model_performance_random_forest$AUC_validation)
-model_performance_random_forest$Data_spacing <- factor(model_performance_random_forest$Data_spacing)
-```
-
-### Visial comparison
-```{r rf models plot, fig.height=4, fig.width = 10, echo=FALSE}
-ggplot(model_performance_random_forest, aes(x = model_performance_random_forest$Data_spacing)) + 
-  geom_boxplot(aes(y=AUC_testing, colour = "AUC testing")) + 
-  geom_boxplot(aes(y=AUC_validation, colour = "AUC validation")) +
-  scale_x_discrete(limits=c("2.5", "5"))  +
-  ylim(0.8,1) +
-  labs(title = "Predictive performance of random forest models",
-       x = "Phase behaviour data grid spacing (%)",
-       y = "Area under the ROC curve (AUC)",
-       color = "Metric") +
-  scale_color_brewer(palette = "Set1") +
-  theme_classic()
-```
-
-### Statistical comparison
-```{r rf models statistics, echo = FALSE}
-cat("Comparison of AUC testing values for random forest models \n")
-run_statistical_analysys(model_performance_random_forest, model_performance_random_forest$AUC_testing, model_performance_random_forest$Data_spacing)
-
-cat("Comparison of AUC validation values for random forest models \n")
-run_statistical_analysys(model_performance_random_forest, model_performance_random_forest$AUC_validation, model_performance_random_forest$Data_spacing)
-```
-
-The predictive performance of the random forest model on the testing phase behaviour data obtained using a 2.5 % grid spacing is statistically significantly better than that on the testing phase behaviour data obtained using a 5 % grid spacing, and, hence this dataset was carried forward.
-
-# Export results 
-```{r export}
-write.csv(model_performance_25pc_step, "Results/Model performance (2.5 pc step).csv", row.names = FALSE)
-write.csv(model_performance_5pc_step, "Results/Model performance (5 pc step).csv", row.names = FALSE)
-
+```{r export, echo = FALSE}
+write.csv(model_performance, "Results/Model performance.csv", row.names = FALSE)
 ```
